tests/snapshots/codegen__alloca.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "p1 - p2 => 16\np2 - p3 => 16\np3 - p4 => 16 expected but got 24\n"
status: 1
