tests/snapshots/codegen__arith.snap
---
source: tests/codegen.rs
assertion_line: 84
expression: "&mine"
---
stdout: "0 => 0\n42 => 42\n5+20-4 => 21\n12 + 34 - 5 => 41\n5+6*7 => 47\n5*(9-6) => 15\n(3+5)/2 => 4\n-10+20 => 10\n- -10 => 10\n- - +10 => 10\n0==1 => 0\n42==42 => 1\n0!=1 => 1\n42!=42 => 0\n0<1 => 1\n1<1 => 0\n2<1 => 0\n0<=1 => 1\n1<=1 => 1\n2<=1 => 0\n1>0 => 1\n1>1 => 0\n1>2 => 0\n1>=0 => 1\n1>=1 => 1\n1>=2 => 0\n1073741824 * 100 / 100 => 0\n({ int i=2; i+=5; i; }) => 7\n({ int i=2; i+=5; }) => 7\n({ int i=5; i-=2; i; }) => 3\n({ int i=5; i-=2; }) => 3\n({ int i=3; i*=2; i; }) => 6\n({ int i=3; i*=2; }) => 6\n({ int i=6; i/=2; i; }) => 3\n({ int i=6; i/=2; }) => 3\n({ int i=2; ++i; }) => 3\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; ++*p; }) => 2\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; --*p; }) => 0\n({ int i=2; i++; }) => 2\n({ int i=2; i--; }) => 2\n({ int i=2; i++; i; }) => 3\n({ int i=2; i--; i; }) => 1\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; *p++; }) => 1\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; *p--; }) => 1\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*p++)--; a[0]; }) => 0\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*(p--))--; a[1]; }) => 0\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*p)--; a[2]; }) => 2\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*p)--; p++; *p; }) => 2\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*p++)--; a[0]; }) => 0\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*p++)--; a[1]; }) => 0\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*p++)--; a[2]; }) => 2\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*p++)--; *p; }) => 2\n!1 => 0\n!2 => 0\n!0 => 1\n!(char)0 => 1\n!(long)3 => 0\nsizeof(!(char)0) => 4\nsizeof(!(long)0) => 4\n~0 => -1\n~-1 => 0\n17%6 => 5\n((long)17)%6 => 5\n({ int i=10; i%=4; i; }) => 2\n({ long i=10; i%=4; i; }) => 2\n0&1 => 0\n3&1 => 1\n7&3 => 3\n-1&10 => 10\n0|1 => 1\n0b10000|0b00011 => 19\n0^0 => 0\n0b1111^0b1111 => 0\n0b111000^0b001100 => 52\n({ int i=6; i&=3; i; }) => 2\n({ int i=6; i|=3; i; }) => 7\n({ int i=15; i^=5; i; }) => 10\n1<<0 => 1\n1<<3 => 8\n5<<1 => 10\n5>>1 => 2\n-1>>1 => -1\n({ int i=1; i<<=0; i; }) => 1\n({ int i=1; i<<=3; i; }) => 8\n({ int i=5; i<<=1; i; }) => 10\n({ int i=5; i>>=1; i; }) => 2\n-1 => -1\n({ int i=-1; i; }) => -1\n({ int i=-1; i>>=1; i; }) => -1\n0?1:2 => 2\n1?1:2 => 1\n0?-2:-1 => -1\n1?-2:-1 => -2\nsizeof(0?1:2) => 4\nsizeof(0?(long)1:(long)2) => 8\n0?(long)-2:-1 => -1\n0?-2:(long)-1 => -1\n1?(long)-2:-1 => -2\n1?-2:(long)-1 => -2\n({ int x; int *p=&x; p+20-p; }) => 20\n({ int x; int *p=&x; p+20-p>0; }) => 1\n({ int x; int *p=&x; p-20-p; }) => -20\n({ int x; int *p=&x; p-20-p<0; }) => 1\n(char *)0xffffffffffffffff - (char *)0xfffffffffffffff0 => 15\n(char *)0xfffffffffffffff0 - (char *)0xffffffffffffffff => -15\n(void *)0xffffffffffffffff > (void *)0 => 1\n3 ? 3 : 5 => 3\n0 ? 0 : 5 => 5\n({ int i = 3; ++i; i ? i : 10; }) => 4\n(long double)3 => 3\n(long double)3+2 => 5\n(long double)3*2 => 6\n(long double)3+2.0 => 5\nOK\n"
status: 0
