tests/snapshots/codegen__commonsym.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "x => 5\ny => 7 expected but got 0\n"
status: 1
